--- a/.quartz/layouts/partials/head.html
+++ b/.quartz/layouts/partials/head.html
@@ -49,7 +49,7 @@
   {{ $s := resources.Get $scriptname | resources.ExecuteAsTemplate $scriptname . | resources.Fingerprint "md5" | resources.Minify }}
   <script src="{{$s.Permalink}}"></script>
   {{end}}
-  {{partial "katex.html" .}}
+  {{partial "mathjax.html" .}}
     
   <script src="https://unpkg.com/@floating-ui/core@0.7.3"></script>
   <script src="https://unpkg.com/@floating-ui/dom@0.5.4"></script>
