--- a/.quartz/layouts/index.html
+++ b/.quartz/layouts/index.html
@@ -8,6 +8,7 @@
     <!-- Begin actual content -->
     {{partial "header.html" .}}
     <article>
+        {{partial "mathjax-preamble.html" .}}
         {{partial "toc.html" .}}
         {{partial "textprocessing.html" . }}
         {{if $.Site.Data.config.enableRecentNotes}}
