--- a/.quartz/layouts/partials/mathjax-preamble.html
+++ b/.quartz/layouts/partials/mathjax-preamble.html
@@ -1,6 +1,6 @@
 {{ $preambleContent := resources.Get "mathjax/preamble.sty" | resources.Fingerprint }}  
 <div>
 $$
-  {{ $preambleContent }}
+  {{ $preambleContent.Content }}
 $$
 </div>
