--- a/.quartz/layouts/_default/section.html
+++ b/.quartz/layouts/_default/section.html
@@ -9,6 +9,7 @@
     {{partial "header.html" .}}
     <article>
         <h1>{{ i18n "all_posts" . }}</h1>
+        {{partial "mathjax-preamble.html" .}}
         {{with .Params.description}}
             <p>{{.}}</p>
         {{end}}
