--- a/.quartz/layouts/_default/single.html
+++ b/.quartz/layouts/_default/single.html
@@ -19,6 +19,7 @@
           {{ end }}
       </ul>
       {{partial "toc.html" .}}
+      {{partial "mathjax-preamble.html" .}}
       {{partial "textprocessing.html" . }}
     </article>
     {{partial "footer.html" .}}
