--- a/.quartz/layouts/partials/textprocessing.html
+++ b/.quartz/layouts/partials/textprocessing.html
@@ -2,7 +2,7 @@
 {{ $raw := .RawContent }}
 {{ $page := .Page }}
 
-{{/* Revert goldmark postprocessing */}}
+{{/* Revert goldmark preprocessing */}}
 {{$latex := findRE "(?:\\${2}([^\\$]+)\\${2})|(?:\\$([^\\$]*)\\$)" $content}}
 {{range $latex}}
   {{/* "revert" backslash + space/line breaks, because Markdown preprocessing converts "\\\n" to a "\n" */}}
@@ -99,4 +99,7 @@
   {{ $content = $content | replaceRE "blockquote class=callout" "blockquote" }}
 {{end}}
 
+<xmp>
+  {{ $content | safeHTML }}
+</xmp>
 {{ $content | safeHTML }}
