fix: restore escapes on `#`
this fixes #8.

--- a/.quartz/layouts/partials/textprocessing.html
+++ b/.quartz/layouts/partials/textprocessing.html
@@ -29,6 +29,9 @@
     {{$fixed = replace $fixed . (printf "[%s](%s)" $linkInner $decodedDataSrc)}}
   {{end}}
 
+  {{/* "restore" escapes on #, because goldmark seems to remove them */}}
+  {{$fixed := replaceRE "#" "\\#" $fixed}}
+
   {{$content = replace $content . $fixed}}
 {{end}}
 
