--- a/.quartz/layouts/partials/head.html
+++ b/.quartz/layouts/partials/head.html
@@ -154,6 +154,9 @@
       {{if $data.enableCodeBlockTitle | default $.Site.Data.config.enableCodeBlockTitle -}}
       addTitleToCodeBlocks();
       {{- end -}}
+      {{if $data.enableLatex | default $.Site.Data.config.enableLatex}}
+      MathJax.typeset()
+      {{end}}
     };
   </script>
   {{if $data.enableSPA | default $.Site.Data.config.enableSPA}}
